fix alignment ritch button

--- a/packages/openbridge-webcomponents/src/components/rich-button/rich-button.css
+++ b/packages/openbridge-webcomponents/src/components/rich-button/rich-button.css
@@ -49,6 +49,7 @@
 
 .container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -61,8 +62,9 @@
 }
 
 .container-content {
+  height: 100%;
   display: flex;
-  align-items: center;
+  align-items: baseline;
   flex-grow: 1;
   gap: 8px;
   padding: 8px;
